--- a/widget/show/view.ejs
+++ b/widget/show/view.ejs
@@ -1,1 +1,5 @@
-<%= options.value %>
+<label class="<%= Class.LABEL_CLASS_NAMES %>">
+    <%= options.label %>
+    <span class="<%= Class.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
+</label>
+<div class="<%= Class.VALUE_CLASS_NAMES %>"><%= options.value %></div>
