--- a/widget/textbox/view.ejs
+++ b/widget/textbox/view.ejs
@@ -1,5 +1,5 @@
 <label class="<%= Class.LABEL_CLASS_NAMES %>">
     <%= options.label %>
-    <span class="<%= Class.DESCRIPTION_CLASS_NAMES %>"><%= options.description %></span>
+    <span class="<%= Class.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
 </label>
 <input type='text' value='<%= options.value %>' class="<%= Class.INPUT_CLASS_NAMES %>"/>
