--- a/widget/show/view.ejs
+++ b/widget/show/view.ejs
@@ -1,5 +1,5 @@
-<label class="<%= Class.LABEL_CLASS_NAMES %>">
+<label class="<%= Class.OPTIONS.LABEL_CLASS_NAMES %>">
     <%= options.label %>
-    <span class="<%= Class.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
+    <span class="<%= Class.OPTIONS.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
 </label>
-<div class="<%= Class.VALUE_CLASS_NAMES %>"><%= options.value %></div>
+<div class="<%= Class.OPTIONS.VALUE_CLASS_NAMES %>"><%= options.value %></div>
