Phui.Show and Phui.Textbox are basic widgets from which to build more complex ones like Cashnet.AclEditable.

--- a/widget/show/view.ejs
+++ b/widget/show/view.ejs
@@ -1,5 +1,1 @@
-<label class="<%= Class.OPTIONS.LABEL_CLASS_NAMES %>">
-    <%= options.label %>
-    <span class="<%= Class.OPTIONS.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
-</label>
-<div class="<%= Class.OPTIONS.VALUE_CLASS_NAMES %>"><%= options.value %></div>
+<div class="<%= Class.OPTIONS.CLASS_NAMES %>"><%= options.value %></div>
