--- a/widget/textbox/view.ejs
+++ b/widget/textbox/view.ejs
@@ -1,5 +1,1 @@
-<label class="<%= Class.OPTIONS.LABEL_CLASS_NAMES %>">
-    <%= options.label %>
-    <span class="<%= Class.OPTIONS.DESCRIPTION_CLASS_NAMES %>" style="display:none;"><%= options.description %></span>
-</label>
-<input type='text' value='<%= options.value %>' class="<%= Class.OPTIONS.INPUT_CLASS_NAMES %>"/>
+<input class='<%= Class.OPTIONS.CLASS_NAMES %>' type='text' value='<%= options.value %>'/>
