--- a/grid/views/init.ejs
+++ b/grid/views/init.ejs
@@ -15,10 +15,14 @@
 		</tbody>
 	</table>
 </div>
-<table class='footer'>
-	<tfoot>
-		<tr>
-			<td>Loading ...</td>
-		</tr>
-	</tfoot>
-</table>
+<div class='footer'>
+	<div class='pagelisting'>
+		Blah Blah Blah
+	</div>
+	<div class='gridpages'>
+		Holler
+	</div>
+	<form class='pageinput' action="">
+		Go to Page <input type='text' size="2" class='pagenumber'/>
+	</form>
+</div>
