--- a/grid/views/columns.ejs
+++ b/grid/views/columns.ejs
@@ -1,3 +1,3 @@
-<%$.each(this, function(name, title){%>
-<colgroup class='<%= name %>-colgroup'></colgroup>
+<%$.each(this.columns, function(name, title){%>
+<colgroup class='<%= name %>-colgroup' <%= widths[name] ? "style='width:"+widths[name]+"px'" : '' %>></colgroup>
 <%})%>
