getting stuff working in IE6

--- a/grid/views/body.ejs
+++ b/grid/views/body.ejs
@@ -9,6 +9,6 @@
 <%}%>
 <tr class='spacing'>
 	<%$.each(options.columns, function(name, title){%>
-		<td><div class='spacer'><%= title %></div></td>
+		<th><div class='spacer'><%= title %></div></th>
 	<%})%>
 </tr>
