--- a/grid/views/init.ejs
+++ b/grid/views/init.ejs
@@ -17,12 +17,14 @@
 </div>
 <div class='footer'>
 	<div class='pagelisting'>
-		Blah Blah Blah
+		Loading ...
 	</div>
 	<div class='gridpages'>
-		Holler
+		Loading ...
 	</div>
 	<form class='pageinput' action="">
-		Go to Page <input type='text' size="2" class='pagenumber'/>
+		<div>
+			Go to Page <input type='text' size="2" class='pagenumber'/>
+		</div>
 	</form>
 </div>
