--- a/grid/views/init.ejs
+++ b/grid/views/init.ejs
@@ -15,16 +15,15 @@
 		</tbody>
 	</table>
 </div>
-<div class='footer'>
-	<div class='pagelisting'>
-		Loading ...
-	</div>
-	<div class='gridpages'>
-		Loading ...
-	</div>
-	<form class='pageinput' action="">
-		<div>
-			Go to Page <input type='text' size="2" class='pagenumber'/>
-		</div>
-	</form>
-</div>
+<table class='footer'>
+	<tr>
+		<td class='pagelisting'></td>
+		<td class='gridpages'></td>
+		<td class='pageinput'>
+			<form  action="">
+					Go to Page <input type='text' size="2" class='pagenumber'/>
+			</form>
+		</td>
+	</tr>
+</table>
+
