--- a/grid/views/init.ejs
+++ b/grid/views/init.ejs
@@ -7,13 +7,14 @@
 		</thead>
 	</table>
 </div>
-
-<div <%= Phui.Filler%> class='body'>
-	<table>
-		<tbody>
-			
-		</tbody>
-	</table>
+<div  class='body' style='width: 100%'>
+	<div class='innerBody'>
+		<table>
+			<tbody>
+				
+			</tbody>
+		</table>
+	</div>
 </div>
 <table class='footer'>
 	<tr>
