--- a/paginator/page/views/init.ejs
+++ b/paginator/page/views/init.ejs
@@ -18,4 +18,5 @@
 <div class="<%= this.options.buttonClass %> last_record <%= this.options.nextActive ? this.options.activeClass : ""%>">
 	<%= this.options.lastText%>
 </div>
+abv
 				
