--- a/grid/grid.css
+++ b/grid/grid.css
@@ -109,3 +109,11 @@ div {
 .footer form {
 	margin:0px;padding:0px
 }
+.column-resizer {
+	position: absolute;
+	border-right: solid 1px black;
+	border-left: solid 1px black;
+	cursor: e-resize;
+	z-index: 9999;
+}
+.innerBody tr:nth-child(odd) {background: #DEF}
