--- a/grid/groupable/views/init.ejs
+++ b/grid/groupable/views/init.ejs
@@ -1,4 +1,4 @@
-<div class='droparea'>Drop things here</div>
+<div class='droparea ui-helper-clearfix'><span id="dragToGroupText"><%= this.dragToGroupText%></span></div>
 <div class='gridarea'></div>
 <div class='paginationarea'></div>
 
