--- a/grid/views/body.ejs
+++ b/grid/views/body.ejs
@@ -1,11 +1,6 @@
 <%for(var i =0; i < items.length; i++){%>
 	<%var item= items[i]%>
-	<tr <%= item%> class='<%= i==0 ? "first-row" : ""%>'>
-		<%$.each(options.columns, function(name, title){%>
-			<td><%= options.render && options.render[name] ?  options.render[name](item) : item[name] %></td>
-		<%})%>
-	</tr>
-
+	<%= this.options.renderer(item, options,i, items) %>
 <%}%>
 <tr class='spacing'>
 	<%$.each(options.columns, function(name, title){%>
