--- a/grid/tree/views/rows.ejs
+++ b/grid/tree/views/rows.ejs
@@ -1,6 +1,6 @@
-<%for(var i =0; i < items.length; i++){%>
-	<%var item= items[i]%>
-	<tr <%= item%> class='<%= i==0 ? "first-row" : ""%>'>
+<%for(var i =0; i < children.length; i++){%>
+	<%var item= children[i]%>
+	<tr <%= item%> class='<%= i==0 ? "first-row" : ""%> parent_<%= parent.identity() %>' collapsed='true'>
 		<%$.each(options.columns, function(name, title){%>
 			<td><%= options.render && options.render[name] ?  options.render[name](item) : item[name] %></td>
 		<%})%>
