Making combobox work with the full set of requirements - work in progress.

--- a/combobox/combobox.css
+++ b/combobox/combobox.css
@@ -44,3 +44,11 @@
 	font-size: 12px;
 	overflow: hidden;	
 }
+
+.phui_combobox_dropdown .hover {
+	background-color: orange;
+}
+
+.phui_combobox_dropdown .hover span {
+	color: white !important;
+}
