It's possible to add a disabledClassName to configure combo widget.

--- a/combobox/combobox.css
+++ b/combobox/combobox.css
@@ -52,3 +52,7 @@
 .phui_combobox_dropdown .hover span {
 	color: white !important;
 }
+
+.phui_combobox_dropdown span.disabled {
+	color: #bbbbbb;
+}
