--- a/combobox/views/default_text_template.ejs
+++ b/combobox/views/default_text_template.ejs
@@ -1,6 +1,6 @@
 <span style="float:left;display: block;height:13px;" 
       class="ui-icon <% if (item.type == "folder") {%>ui-icon-folder-open<% } else { %>ui-icon-document<% } %>">
 </span>
-<span style="<%= style %><% if (!item.enabled) { %>color:#cccccc;<% } %>">
+<span <% if(item.enabled) { %>style="<%= textStyle %>"<% } else {%>class="<%= options.disabledClassName %><% } %>">
 	<%= item.text %>
 </span>
