--- a/combobox/views/dropdown/row.ejs
+++ b/combobox/views/dropdown/row.ejs
@@ -1,4 +1,4 @@
 <li <%if (item.enabled) { %><%= item %><% } %>>
     <span style="float:left;margin-left:<%= item.depth*20 %>px">&nbsp;</span>
-    <%= view( options.textTemplate, {item: item, style: options.textStyle} ) %> 
+    <%= view( options.textTemplate, {item: item, textStyle: options.textStyle, options: options} ) %> 
 </li>
