--- a/combobox/combobox.css
+++ b/combobox/combobox.css
@@ -1,4 +1,5 @@
-.phui_combobox {
+.phui_combobox,
+.phui_combobox_autosuggest {
 	width: 310px;
 	background:none repeat scroll 0 0 #FFFFFF;
 	border:1px solid #888888;
@@ -8,7 +9,8 @@
 	vertical-align:top;
 }
 
-.phui_combobox input {
+.phui_combobox input,
+.phui_combobox_autosuggest input {
 	background:none repeat scroll 0 0 transparent;
 	border:0 none;
 	height:14px;
@@ -19,11 +21,13 @@
 	padding:0;
 }
 
-.phui_combobox .container {
+.phui_combobox .container,
+.phui_combobox_autosuggest .container {
 	margin-right:17px;
 }
 
-.phui_combobox .toggle {
+.phui_combobox .toggle,
+.phui_combobox_autosuggest .toggle {
 	background:url("images/dropdown.png") center no-repeat;
 	width:17px;
 	float: right;
