Fixed bugs with get/set and enable/disable apis.

--- a/combobox/combobox.css
+++ b/combobox/combobox.css
@@ -91,7 +91,7 @@
 }
 
 .phui_combobox_dropdown .disabled .text {
-	color: #bbbbbb;
+	color: #bbbbbb !important;
 }
 
 .phui_combobox_dropdown .selectable {
