--- a/grid/views/columns.ejs
+++ b/grid/views/columns.ejs
@@ -1,8 +1,8 @@
 <%$.each(this.group || [], function(i, group){%>
-	<colgroup class='<%= group %>-colgroup' <%= widths[group] ? "style='width:"+widths[group]+"px'" : '' %>></colgroup>
+	<col class='<%= group %>-colgroup' <%= widths[group] ? "style='width:"+widths[group]+"px'" : '' %>></col>
 <%})%>
 <%for(var name in this.columns){%>
 	<%if($.inArray(name, this.group || []) == -1){%>
-		<colgroup class='<%= name %>-colgroup' <%= widths[name] ? "style='width:"+widths[name]+"px'" : '' %>></colgroup>
+		<col class='<%= name %>-colgroup' <%= widths[name] ? "style='width:"+widths[name]+"px'" : '' %>></col>
 	<%}%>
 <%}%>
