fixing combobox filter issue in IE7

--- a/combobox/combobox.css
+++ b/combobox/combobox.css
@@ -68,6 +68,10 @@
 	overflow: hidden;
 }
 
+*+html .phui_combobox_dropdown li {
+	display: inline;
+}
+
 .phui_combobox_dropdown .activated {
 	background-color: #FFDE58;
 }
