--- a/widget/dropdown/test/test.ejs
+++ b/widget/dropdown/test/test.ejs
@@ -1,5 +1,5 @@
 <label>My Dropdown</label>
-<%= Phui.Widget.Dropdown.view({name: 'my_dropdown', value: 'widowed', 
+<%= Mxui.Widget.Dropdown.view({name: 'my_dropdown', value: 'widowed', 
                                options: [{value: 'single', text: 'Single'},
                                          {value: 'married', text: 'Married'},
                                          {value: 'divorced', text: 'Divorced'},
