--- a/filemanager/filemanager.less
+++ b/filemanager/filemanager.less
@@ -72,3 +72,9 @@ body .grid {
 	z-index: 9999;
 }
 .innerBody tr:nth-child(odd), .scrollBody tr:nth-child(odd) {background: #DEF}
+
+li.item {
+	background: url(folder.jpg) no-repeat;
+	padding-left:20px;
+	padding-bottom:5px;
+}
