updates to filemanager, refactored a bit

--- a/filemanager/filemanager.less
+++ b/filemanager/filemanager.less
@@ -15,7 +15,7 @@ td {padding: 3px;}
 	ul{
 		padding:0 5px 0 5px;
 	}
-	.activeFolder>span{
+	.selected>span{
 		background-color:#aaaaaa;
 	}
 	li.item {
