adding selectable rows

--- a/filemanager/filemanager.less
+++ b/filemanager/filemanager.less
@@ -25,6 +25,11 @@ td {padding: 3px;}
 		cursor:pointer;
 	}
 }
+#wrapper .files{
+	.activated{
+		background-color:#aaaaaa;
+	}
+}
 .grid{
 	width:500px;
 	height:@height+20;
