fixing some minor issues

--- a/grid2/views/head.ejs
+++ b/grid2/views/head.ejs
@@ -1,7 +1,7 @@
 <thead>
 	<tr>
 	<%for(var col in columns){%>
-		<%= view('//mxui/grid2/views/th', {col: col}) %>
+		<%= view('//cat/grid/views/th', {col: col}) %>
 	<%}%>
 	</tr>
 </thead>
