even more cleaning of widgets, most work again now

--- a/layout/block/block.html
+++ b/layout/block/block.html
@@ -22,13 +22,13 @@
 <a href='#' id='block'>Block</a>
 </div>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=mxui/block&steal[env]=development'>   
+                src='../../../steal/steal.js?steal[app]=mxui/layout/block&steal[env]=development'>   
         </script>
 <script id="demo-source" type='text/javascript'>
 $(function(){
 	$("#blocker").css("opacity",0.5);
 	$("#block").click(function(){
-		$("#blocker").mxui_block().trigger('show')
+		$("#blocker").mxui_layout_block().trigger('show')
 	});			
 })
 </script>
