--- a/layout/block/funcunit.html
+++ b/layout/block/funcunit.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../funcunit/qunit/qunit.css" />
+        <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
     </head>
     <body>
 
@@ -10,6 +10,6 @@
 	<h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
 	<div id="qunit-test-area"></div>
-    <script type='text/javascript' src='../../steal/steal.js?steal[app]=mxui/block/test/funcunit'></script>
+    <script type='text/javascript' src='../../../steal/steal.js?mxui/layout/block/block_test.js'></script>
     </body>
 </html>
