--- a/layout/fit/fit.html
+++ b/layout/fit/fit.html
@@ -42,7 +42,7 @@
 				left: 300px;
 			}	
         </style>
-       <link type="text/css" href="../../mxui/combobox/combobox.css" rel="stylesheet" />
+       <link type="text/css" href="../../../mxui/combobox/combobox.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id='fitter' class="fittable">Demo Fittable</div>
@@ -75,10 +75,10 @@
 			<div class="bottomPadding4"></div>
 		</div>		
         <script type='text/javascript' 
-                src='../../steal/steal.js'>   
+                src='../../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/fittable").then(function($){
+            steal.plugins("mxui/layout/fit").then(function($){
 				
 				var items = function(n) {
 					var items = ["<ul>"];
