--- a/layout/resizer/resizer.html
+++ b/layout/resizer/resizer.html
@@ -33,10 +33,10 @@
 	    	</tr>
 	    </table>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?mxui/resizer,development'>   
+                src='../../../steal/steal.js?mxui/layout/resizer,development'>   
         </script>
 		<script type='text/javascript'>
-			$("#resizer").mxui_resizer();
+			$("#resizer").mxui_layout_resizer();
 		</script>
 	</body>
 </html>
