adding a order plugin

--- a/layout/sortable/sortable.html
+++ b/layout/sortable/sortable.html
@@ -53,7 +53,7 @@
 		<div class='somethingElse' id='drag'>SOMETHING ELSE</div>
 		<div id='away'>away</div>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=mxui/sortable&steal[env]=development'>   
+                src='../../../steal/steal.js?mxui/layout/sortable'>   
         </script>
 		<script type='text/javascript'>
 			$("#sortable").mxui_sortable().bind("sortable:addPlaceholder", function(){
