--- a/data/grid/views/init.ejs
+++ b/data/grid/views/init.ejs
@@ -1,21 +1,15 @@
-<div class='header'>
-	<table>
-		<thead>
-			<tr>
-				<td>Loading ...</td>
-			</tr>
-		</thead>
-	</table>
-</div>
-<div  class='body' style='width: 100%'>
-	<div class='innerBody'>
-		<table>
-			<tbody>
-				
-			</tbody>
-		</table>
-	</div>
-</div>
-<div class='footer'></div>
-
-
+<table>
+	<thead>
+		<tr>
+		<%for(var col in columns){%>
+			<%= view('//mxui/data/grid/views/th', {name: col, title: columns[col]}) %>
+		<%}%>
+		</tr>
+	</thead>
+	<tbody>
+		<tr class='loading'>
+			<td colspan='<%=count %>'>Loading ...</td>
+		</tr>
+		
+	</tbody>
+</table>
