--- a/data/grid2/views/init.ejs
+++ b/data/grid2/views/init.ejs
@@ -1,15 +1,21 @@
-<table>
-	<thead>
-		<tr>
-		<%for(var col in columns){%>
-			<%= view('//mxui/data/grid2/views/th', {name: col, title: columns[col]}) %>
-		<%}%>
-		</tr>
-	</thead>
-	<tbody>
-		<tr class='loading'>
-			<td colspan='<%=count %>'>Loading ...</td>
-		</tr>
-		
-	</tbody>
-</table>
+<div class='header'>
+	<table>
+		<thead>
+			<tr>
+				<td>Loading ...</td>
+			</tr>
+		</thead>
+	</table>
+</div>
+<div  class='body' style='width: 100%'>
+	<div class='innerBody'>
+		<table>
+			<tbody>
+				
+			</tbody>
+		</table>
+	</div>
+</div>
+<div class='footer'></div>
+
+
