--- a/data/grid/views/list.ejs
+++ b/data/grid/views/list.ejs
@@ -1,5 +1,5 @@
 <% for(var i =0; i < items.length; i++){ %>
-  <tr <%= items[i]%>>
+  <tr <%= items[i]%> tabindex='0'>
   	<%= $.View(row, items[i] ) %>
   </tr>
 <%}%>
