improvements in resizing

--- a/data/grid/views/init.ejs
+++ b/data/grid/views/init.ejs
@@ -1,4 +1,4 @@
-<table>
+<table cellpadding='0' cellspacing='0'>
 	<thead>
 		<tr>
 		<%for(var col in columns){%>
@@ -12,4 +12,5 @@
 		</tr>
 		
 	</tbody>
+	
 </table>
